# puffin_old

./: README.md
C++/: common.h
C++/gravity/: gravity.cpp  gravity.h
C++/raytrace/: raytrace.cpp  raytrace.h
C++/reconstruction/: reconstruction.cpp  reconstruction.h
Haskell/: .raytrace.hs.swp  Main.hs  Raytrace.hs  RaytraceTest.hs  raytrace.hs
Python/: lib.pyo
Python/gravity/: gravity.py
Python/raytrace/: .raytrace.py.swp
Python/reconstruction/: reconstruction-test-py.tga  reconstruction.py
src/Haskell/: basicScene.hs  puffin.1.prof  puffin.cabal  puffin.post.prof
src/Haskell/Puffin/Math/: Matrix.hs
src/Haskell/Puffin/Raytracer/: Objects.hs  Tracer.hs
src/Haskell/testsuite/: Test.hs
src/Python/: lib.py
src/Python/raytrace/: raytrace.py
src/Python/reconstruction/: img2.py
