Name:           puffin
Version:        0.1
Description:    Simple Haskell raytracer
License:        GPL-3
License-file:   LICENSE
Author:         Luke Tomlin
Maintainer:     luke.tomlin@gmail.com
Build-Type:     Simple
Cabal-Version:  >=1.2


Library
  Exposed-modules:
    Puffin.Raytracer.Tracer
    Puffin.Raytracer.Objects
    Puffin.Math.Matrix
  
  Extensions: ExistentialQuantification
  Ghc-options: -O -prof -fprof-auto

Executable puffin
  Main-is:      basicScene.hs
  Build-depends:
    base >= 4,
    gd,
    vector

  Extensions: ExistentialQuantification
  Ghc-options: -O -prof -fprof-auto
